--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -9,6 +9,7 @@ rules:
   - configmaps
   - pods
   - services
+  - services/finalizers
   - serviceaccounts
   - persistentvolumeclaims
   - secrets
