--- a/config/7.8.0/dbs/mysql.yaml
+++ b/config/7.8.0/dbs/mysql.yaml
@@ -57,6 +57,8 @@ databases:
                       value: "[[$.DBPassword]]"
                     - name: MYSQL_DATABASE
                       value: "[[.DatabaseName]]"
+                    - name: MYSQL_DEFAULT_AUTHENTICATION_PLUGIN
+                      value: "mysql_native_password"
                   volumeMounts:
                     - mountPath: "/var/lib/mysql/data"
                       name: "[[.ServerName]]-mysql-[[$.Constants.DatabaseVolumeSuffix]]"
