--- a/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/7.8/businessautomation-operator.7.8.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.8.0
-    createdAt: "2020-05-15 15:05:43"
+    createdAt: "2020-06-10 13:54:36"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -188,37 +188,37 @@ spec:
                 - name: PAM_PROCESS_MIGRATION_IMAGE_7.8.0
                   value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.8.0
                 - name: OSE_CLI_IMAGE_7.8.0
-                  value: registry.redhat.io/openshift3/ose-cli@sha256:eda798d5c0f026b2221716f5df33fd97cd25bfb565f969e76e62815f1bd3a924
+                  value: registry.redhat.io/openshift3/ose-cli@sha256:126975f4569c9371ac4479758c0746497863dbe32f33aaaa7402226bf3b71df5
                 - name: MYSQL_PROXY_IMAGE_7.8.0
-                  value: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
+                  value: registry.redhat.io/rhscl/mysql-80-rhel7@sha256:bb41a7e9275dfe114c7de74df1e19a8ca4d709a23a0df021ef342c2d4dcdbded
                 - name: POSTGRESQL_PROXY_IMAGE_7.8.0
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:3711a4a27cac087be0934aeb39afe395ac314b76d26198b31a5a5a2aa4e39beb
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:5c4f5f52a37718a9a1997ba212ef172694475558c35232b56dac638529c5b569
                 - name: DATAGRID_IMAGE_7.8.0
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:3375ec169d274278da56d1401c5c1285f7d2812ea0bde2ac9ad9652b69f80893
                 - name: BROKER_IMAGE_7.8.0
                   value: registry.redhat.io/amq7/amq-broker@sha256:7e81fec6e8fcb760829ab73512d1abf4da93e6e3bca42a12f517f793b34d6709
                 - name: DM_KIESERVER_IMAGE_7.7.1
-                  value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.7.1
+                  value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8@sha256:16461e4b59424965608a2bd0519525e33468dbacdeb32aac44bf77d81419f04d
                 - name: DM_CONTROLLER_IMAGE_7.7.1
-                  value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.7.1
+                  value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8@sha256:05c2d24caaf28f50527d8f710cec03960360be50b89fd9a6e5b40d239c18f5ca
                 - name: DM_DC_IMAGE_7.7.1
-                  value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.7.1
+                  value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8@sha256:39afa1dcb5634bbe4901c0ed36d66b92713e8101ffa5ea9f20b94d9d93de9b5f
                 - name: PAM_KIESERVER_IMAGE_7.7.1
-                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.7.1
+                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8@sha256:071d0add5cbcf5ba06b3f87034a0dc8d80590ae7efc13f6fafaee63bc54dc090
                 - name: PAM_CONTROLLER_IMAGE_7.7.1
-                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.7.1
+                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8@sha256:b731ec8d1d87a24711b525aaf254ee15d701b60003b97199a097e09d96571666
                 - name: PAM_BC_IMAGE_7.7.1
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.7.1
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8@sha256:8eeaa8b6ef049bad0aba252eebad45ca704b97d638a4a789899000b2143b8f11
                 - name: PAM_BC_MONITORING_IMAGE_7.7.1
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.7.1
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8@sha256:db84958e32e5857c60d088f3866665c4405234a961f571b91161f31eb3d35cca
                 - name: PAM_SMARTROUTER_IMAGE_7.7.1
-                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.1
+                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8@sha256:d0d426173e6e3fed9747147e34d19388611815bc93f38dd6f5b3c2f2bd6cc0cd
                 - name: OSE_CLI_IMAGE_7.7.1
-                  value: registry.redhat.io/openshift3/ose-cli@sha256:eda798d5c0f026b2221716f5df33fd97cd25bfb565f969e76e62815f1bd3a924
+                  value: registry.redhat.io/openshift3/ose-cli@sha256:126975f4569c9371ac4479758c0746497863dbe32f33aaaa7402226bf3b71df5
                 - name: MYSQL_PROXY_IMAGE_7.7.1
                   value: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
                 - name: POSTGRESQL_PROXY_IMAGE_7.7.1
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:3711a4a27cac087be0934aeb39afe395ac314b76d26198b31a5a5a2aa4e39beb
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:5c4f5f52a37718a9a1997ba212ef172694475558c35232b56dac638529c5b569
                 - name: DATAGRID_IMAGE_7.7.1
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:3375ec169d274278da56d1401c5c1285f7d2812ea0bde2ac9ad9652b69f80893
                 - name: BROKER_IMAGE_7.7.1
@@ -240,27 +240,27 @@ spec:
                 - name: PAM_SMARTROUTER_IMAGE_7.7.0
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8@sha256:4fbfe67e9b7d8411ef963815d2c2bbbd8071025741f8f0184d48b5bd769dc9e3
                 - name: OSE_CLI_IMAGE_7.7.0
-                  value: registry.redhat.io/openshift3/ose-cli@sha256:eda798d5c0f026b2221716f5df33fd97cd25bfb565f969e76e62815f1bd3a924
+                  value: registry.redhat.io/openshift3/ose-cli@sha256:126975f4569c9371ac4479758c0746497863dbe32f33aaaa7402226bf3b71df5
                 - name: MYSQL_PROXY_IMAGE_7.7.0
                   value: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
                 - name: POSTGRESQL_PROXY_IMAGE_7.7.0
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:3711a4a27cac087be0934aeb39afe395ac314b76d26198b31a5a5a2aa4e39beb
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:5c4f5f52a37718a9a1997ba212ef172694475558c35232b56dac638529c5b569
                 - name: DATAGRID_IMAGE_7.7.0
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:cfd8c4ac1c495b766dd3ff1a85c35afe092858f8f65b52a5b044811719482236
                 - name: BROKER_IMAGE_7.7.0
                   value: registry.redhat.io/amq7/amq-broker@sha256:ba5273b390a4762c21f005fdc92a837680417250dcd5e6d9d3c8f776e9cc372e
                 - name: OAUTH_PROXY_IMAGE_LATEST
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:1d5825577014d40e186d14a477d556f2a8a407e699efaad006be21eae93eb1f6
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:37822f29e39493f77007d96a84319c1630343f25ba0f86d0c78af629d956d843
                 - name: OAUTH_PROXY_IMAGE_4.4
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:1d5825577014d40e186d14a477d556f2a8a407e699efaad006be21eae93eb1f6
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:37822f29e39493f77007d96a84319c1630343f25ba0f86d0c78af629d956d843
                 - name: OAUTH_PROXY_IMAGE_4.3
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:d9edec46bb747242a87845e85b2eafdce8e3bf985de2ae21aeb88192cc316e33
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:31eec147bf5731906b1db98936deb83dcec9ea8b94421c85fe0c3d30eafd192b
                 - name: OAUTH_PROXY_IMAGE_4.2
-                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:a3192cc7fc8dab17ea602165bd7c2ae2263e69ef878d1ba9f8de47c2468934a5
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:caa1663ea800851a592a4cc28e835e9618213206a153e3f0c0fcd99bd8ab65b3
                 - name: OAUTH_PROXY_IMAGE_4.1
                   value: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:43fde141b6670727a1771fa52cd125b366275786b4be0a0a0c57005fd6e0c912
                 - name: OAUTH_PROXY_IMAGE_3
-                  value: registry.redhat.io/openshift3/oauth-proxy@sha256:4a5d0a92b80ab0738c0a3e3c975a7c59a4242d4337def418bec7f9ec77785ada
+                  value: registry.redhat.io/openshift3/oauth-proxy@sha256:341720b7a99359affbf618f52757dfc424dc71e52fb95e9d579ec24bc45c68db
                 image: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.8.0
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -457,21 +457,21 @@ spec:
     name: rhpam-smartrouter-rhel8
   - image: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.8.0
     name: rhpam-process-migration-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.7.1
+  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8@sha256:16461e4b59424965608a2bd0519525e33468dbacdeb32aac44bf77d81419f04d
     name: rhdm-kieserver-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.7.1
+  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8@sha256:05c2d24caaf28f50527d8f710cec03960360be50b89fd9a6e5b40d239c18f5ca
     name: rhdm-controller-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.7.1
+  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8@sha256:39afa1dcb5634bbe4901c0ed36d66b92713e8101ffa5ea9f20b94d9d93de9b5f
     name: rhdm-decisioncentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.7.1
+  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8@sha256:071d0add5cbcf5ba06b3f87034a0dc8d80590ae7efc13f6fafaee63bc54dc090
     name: rhpam-kieserver-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.7.1
+  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8@sha256:b731ec8d1d87a24711b525aaf254ee15d701b60003b97199a097e09d96571666
     name: rhpam-controller-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.7.1
+  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8@sha256:8eeaa8b6ef049bad0aba252eebad45ca704b97d638a4a789899000b2143b8f11
     name: rhpam-businesscentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.7.1
+  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8@sha256:db84958e32e5857c60d088f3866665c4405234a961f571b91161f31eb3d35cca
     name: rhpam-businesscentral-monitoring-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.1
+  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8@sha256:d0d426173e6e3fed9747147e34d19388611815bc93f38dd6f5b3c2f2bd6cc0cd
     name: rhpam-smartrouter-rhel8
   - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8@sha256:debf4f45f36509e608c2d8754539aa5697aa4255ac85ab4a521915ef88841660
     name: rhdm-kieserver-rhel8
@@ -489,23 +489,25 @@ spec:
     name: rhpam-businesscentral-monitoring-rhel8
   - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8@sha256:4fbfe67e9b7d8411ef963815d2c2bbbd8071025741f8f0184d48b5bd769dc9e3
     name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:1d5825577014d40e186d14a477d556f2a8a407e699efaad006be21eae93eb1f6
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:37822f29e39493f77007d96a84319c1630343f25ba0f86d0c78af629d956d843
     name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:1d5825577014d40e186d14a477d556f2a8a407e699efaad006be21eae93eb1f6
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:37822f29e39493f77007d96a84319c1630343f25ba0f86d0c78af629d956d843
     name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:d9edec46bb747242a87845e85b2eafdce8e3bf985de2ae21aeb88192cc316e33
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:31eec147bf5731906b1db98936deb83dcec9ea8b94421c85fe0c3d30eafd192b
     name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:a3192cc7fc8dab17ea602165bd7c2ae2263e69ef878d1ba9f8de47c2468934a5
+  - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:caa1663ea800851a592a4cc28e835e9618213206a153e3f0c0fcd99bd8ab65b3
     name: ose-oauth-proxy
   - image: registry.redhat.io/openshift4/ose-oauth-proxy@sha256:43fde141b6670727a1771fa52cd125b366275786b4be0a0a0c57005fd6e0c912
     name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift3/oauth-proxy@sha256:4a5d0a92b80ab0738c0a3e3c975a7c59a4242d4337def418bec7f9ec77785ada
+  - image: registry.redhat.io/openshift3/oauth-proxy@sha256:341720b7a99359affbf618f52757dfc424dc71e52fb95e9d579ec24bc45c68db
     name: oauth-proxy
-  - image: registry.redhat.io/openshift3/ose-cli@sha256:eda798d5c0f026b2221716f5df33fd97cd25bfb565f969e76e62815f1bd3a924
+  - image: registry.redhat.io/openshift3/ose-cli@sha256:126975f4569c9371ac4479758c0746497863dbe32f33aaaa7402226bf3b71df5
     name: ose-cli
   - image: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
     name: mysql-57-rhel7
-  - image: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:3711a4a27cac087be0934aeb39afe395ac314b76d26198b31a5a5a2aa4e39beb
+  - image: registry.redhat.io/rhscl/mysql-80-rhel7@sha256:bb41a7e9275dfe114c7de74df1e19a8ca4d709a23a0df021ef342c2d4dcdbded
+    name: mysql-80-rhel7
+  - image: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:5c4f5f52a37718a9a1997ba212ef172694475558c35232b56dac638529c5b569
     name: postgresql-10-rhel7
   - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:cfd8c4ac1c495b766dd3ff1a85c35afe092858f8f65b52a5b044811719482236
     name: datagrid73-openshift
