[RHPAM-2998] Add http route for PIM in trial environment
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/config/7.8.0/pim/process-migration.yaml
+++ b/config/7.8.0/pim/process-migration.yaml
@@ -113,7 +113,7 @@ processMigration:
         annotations:
           description: Process Migration web server's port.
   routes:
-    - id: "[[.ApplicationName]]-process-migration-http"
+    - id: "[[.ApplicationName]]-process-migration-https"
       metadata:
         name: "[[.ApplicationName]]-process-migration"
         labels:
