--- a/config/7.8.1/dbs/servers/h2.yaml
+++ b/config/7.8.1/dbs/servers/h2.yaml
@@ -61,6 +61,9 @@ servers:
             application: "[[$.ApplicationName]]"
             service: "[[.KieName]]"
         spec:
+          # [[ if ne .Database.StorageClassName "" ]]
+          storageClassName: "[[.Database.StorageClassName]]"
+          # [[ end ]]
           accessModes:
             - ReadWriteOnce
           resources:
