--- a/image.yaml
+++ b/image.yaml
@@ -1,56 +1,47 @@
-- schema_version: 1
-  name: "builder"
-  description: "Golang builder image"
-  version: "7.8.1"
-  from: "rhel8-go-toolset:1.13.4-released"
-  modules:
-    repositories:
-      - name: builder
-        path: modules/builder
-    install:
-      - name: builder
-  osbs:      
-    configuration:
-      container:
-        platforms:
-          only:
-            - x86_64
+schema_version: 1
 
-- schema_version: 1
-  name: "rhpam-7/rhpam-rhel8-operator"
-  description: "Red Hat Business Automation Operator"
-  version: "7.8.1"
-  from: "ubi8-minimal:8-released"
-  labels:
-    - name: "maintainer"
-      value: "bsig-cloud@redhat.com"
-    - name: "com.redhat.component"
-      value: "rhpam-7-rhel8-operator-container"
-    - name: "io.k8s.description"
-      value: "Operator for deploying RHPAM & RHDM"
-    - name: "io.k8s.display-name"
-      value: "Red Hat Business Automation Operator"
-    - name: "io.openshift.tags"
-      value: "rhpam,rhdm,operator"
-  modules:
-    repositories:
-      - name: runtime
-        path: modules/runtime
-    install:
-      - name: runtime
-  osbs:
-    configuration:
-      container:
-        go:
-          modules:
-          - module: github.com/kiegroup/kie-cloud-operator
-            archive: kie-cloud-operator.tar.gz
-        platforms:
-          only:
-            - x86_64
-    extra_dir: osbs-extra
-    repository:
-      name: containers/rhpam-7-operator
-      branch: rhba-7-rhel-8
-  run:
-    user: "1001"
+name: "rhpam-7/rhpam-rhel8-operator"
+description: "Red Hat Business Automation Operator"
+version: "7.8.1"
+from: "ubi8:8-released"
+labels:
+  - name: "maintainer"
+    value: "bsig-cloud@redhat.com"
+  - name: "com.redhat.component"
+    value: "rhpam-7-rhel8-operator-container"
+  - name: "io.k8s.description"
+    value: "Operator for deploying RHPAM & RHDM"
+  - name: "io.k8s.display-name"
+    value: "Red Hat Business Automation Operator"
+  - name: "io.openshift.tags"
+    value: "rhpam,rhdm,operator"
+packages:
+  content_sets:
+    x86_64:
+      - rhel-8-for-x86_64-baseos-rpms
+      - rhel-8-for-x86_64-appstream-rpms
+modules:
+  repositories:
+    - path: modules
+  install:
+    - name: kie-cloud-operator
+osbs:
+  configuration:
+    container:
+      go:
+        modules:
+        - module: github.com/kiegroup/kie-cloud-operator
+          # Optional, only needed for source in 'rhpkg upload' lookaside cache:
+          archive: kie-cloud-operator.tar.gz
+      compose:
+          pulp_repos: true
+      platforms:
+        only:
+          - x86_64
+  repository:
+    name: containers/rhpam-7-operator
+    branch: rhba-7-rhel-8
+run:
+  entrypoint:
+    - "/usr/local/bin/entrypoint"
+  user: "1001"
