[KIECLOUD-405] use openshift CA for keystore generation
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.8.0/common.yaml
+++ b/config/7.8.0/common.yaml
@@ -1019,4 +1019,11 @@ others:
         roleRef:
           kind: Role
           name: "[[.ApplicationName]]-[[.Constants.Product]]svc-edit"
+
+    configMaps:
+      - metadata:
+          name: "[[.ApplicationName]]-kieapp-ca-bundle"
+          labels:
+            app: "[[.ApplicationName]]"
+            "config.openshift.io/inject-trusted-cabundle": "true"
 # Other required resources END
