[RHPAM-3083] - Drop not supported External DB configuration for PIM in UI
Signed-off-by: Swati Kale <swkale@redhat.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -1152,7 +1152,7 @@ spec:
                               description: Keystore secret name
                             from:
                               type: object
-                              description: Image definition to use for all the servers
+                              description: External Database configuration is not fully supported for PIM Image.
                               required:
                                 - kind
                                 - name
