--- a/config/7.8.1/common.yaml
+++ b/config/7.8.1/common.yaml
@@ -13,7 +13,7 @@ console:
           #[[if not .Console.OmitImageStream]]
           - type: ImageChange
             imageChangeParams:
-              automatic: true
+              automatic: false
               containerNames:
                 - "[[.ApplicationName]]-[[.Console.Name]]"
               from:
