--- a/modules/runtime/module.yaml
+++ b/modules/runtime/module.yaml
@@ -7,9 +7,11 @@ artifacts:
   - name: kie-cloud-operator
     image: builder
     path: /usr/local/bin/kie-cloud-operator
+    dest: /usr/local/bin
   - name: console-cr-form
     image: builder
     path: /usr/local/bin/console-cr-form
+    dest: /usr/local/bin
 
 execute:
   - script: install
